# tributeflow

./: .env.example  .gitignore  LICENSE  README.md  config.example.yaml  config.yaml  pyproject.toml
.github/workflows/: ci.yml  eval.yml  publish.yml
apps-script/: PublishButton.gs
evals/: golden.json
examples/: demo-config.yaml  sample_sheet.json
src/tributeflow/: agent.py  config.py  dedup.py  emailer.py  evals.py  main.py  models.py  publisher.py  retry.py  sheets.py  state.py  validation.py
tests/: test_agent_tools.py  test_dedup.py  test_evals.py  test_publisher.py  test_sheets.py  test_state.py  test_validation.py
