[project]
name = "tributeflow"
version = "0.1.0"
description = "Agentic publishing pipeline: Google Sheet -> validated tribute wall data -> GitHub, with plain-English email reports"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.90",
    "google-api-python-client>=2.100",
    "google-auth>=2.23",
    "requests>=2.31",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
tributeflow = "tributeflow.main:cli"
tributeflow-eval = "tributeflow.evals:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
